@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2
 
+  10 Jan 2007; Mike Frysinger <vapier@gentoo.org>:
+
+    Rename --update option in depscan.sh to --force.
+
 * baselayout-1.13.0_alpha11 (10 Jan 2006)
 
   10 Jan 2007; Roy Marples <uberlord@gentoo.org>:
